# azdocli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  README-snapcraft.md  README.md  build.rs  install.ps1  install.sh  snapcraft.yaml  test_commands.ps1  test_config.json.template  validate_snapcraft.py
.devcontainer/: devcontainer.json
.github/: WINGET_SETUP.md  copilot-instructions.md  winget-manifest.yaml
.github/workflows/: build.yml  pr-verification.yml  release.yml  security-audit.yml  static.yml
chocolatey/: README.md  azdocli.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
docs/: ICON.md  README.md  contributing.html  index.html  install  project-structure.md  styles.css  user-guide.html
homebrew/: README.md  azdocli.rb
scripts/: generate-chocolatey.sh  generate-homebrew.sh  generate-snapcraft.sh  generate-winget.sh  update-homebrew-formula.sh
snap/: snapcraft.yaml
src/: README.md  artifacts.rs  auth.rs  boards.rs  commands.rs  config.rs  main.rs  pipelines.rs  pr.rs  project.rs  projects.rs  repos.rs  utils.rs  wiki.rs
winget/: ChristianHelle.AzureDevOpsCLI.installer.yaml  ChristianHelle.AzureDevOpsCLI.locale.en-US.yaml  ChristianHelle.AzureDevOpsCLI.yaml
