[package]
name = "azdocli"
version = "0.1.0"
edition = "2021"
authors = ["Christian Helle"]
description = "CLI tool for interacting with Azure DevOps"
license = "MIT"
homepage = "https://christianhelle.com/azdocli"
repository = "https://github.com/christianhelle/azdocli"
readme = "src/README.md"

[[bin]]
name = "ado"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dirs = "6.0"
async-trait = "0.1"
dialoguer = "0.11"
colored = "3.0"
azure_devops_rust_api = { version = "0.28.0", features = ["git", "pipelines", "wit"], default-features = false }
azure_core = { version = "0.24.0", features = ["reqwest_rustls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
