[package]
name = "azdocli"
version = "0.1.0"
edition = "2021"
authors = ["Christian Helle"]
description = "CLI tool for interacting with Azure DevOps"
license = "MIT"
homepage = "https://christianhelle.com/azdocli"
repository = "https://github.com/christianhelle/azdocli"
readme = "src/README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dirs = "6.0"
dialoguer = "0.12"
colored = "3.0"
azure_devops_rust_api = { version = "0.31.0", features = ["git", "pipelines", "wit"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
